<resources>
    <string name="app_name">My Favorite Movies</string>
    <string name="text_add">Add Movie</string>
    <string name="edit_text">Edit</string>
    <string name="Delete_text">Delete Movie</string>
    <string name="show_yr_text">Show List by Year</string>
    <string name="show_rat_text">Show List by Rating</string>
    <string name="addName">Name:</string>
    <string name="addDescription">Description:</string>
    <string name="addGenre">Genre:</string>
    <string name="addRating">Rating:</string>
    <string name="textYear">Year:</string>
    <string name="stringIMDB">IMDB:</string>
    <string name="addMovieButton">Add Movie</string>
    <string name="textViewMoviesByYearLabel">Movies By Year</string>
    <string name="textViewMoviesByRatingLabel">Movies By Rating</string>
    <string name="textViewTitle">Title:</string>
    <string name="textViewDesc">Description:</string>
    <string name="textViewGenre">Genre:</string>
    <string name="textViewRating">Rating:</string>
    <string name="finishButton">Finish</string>
    <string name="textViewYear">Year:</string>
    <string name="textViewIMDB">IMDB:</string>
    <string name="default_rating">1</string>
    <string name="prompt">Select</string>
    <string name="save">Save Changes</string>
    <string name="editIntent">Edit Movie</string>
    <string name="addIntent">Add Movie</string>
    <string name="yearIntent">Movies By Year</string>
    <string name="rateIntent">Movies By Rating</string>
    <string name="editDialog">Pick a Movie</string>
    <string name="emptyList">No Favorite Movies</string>
</resources>
