<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movies_by_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joyrasmussen.hw2_group34.MoviesByRatingActivity">


    <TextView
        android:text="@string/textViewMoviesByRatingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewMoviesByYearLabel"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMoviesByYearLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/textViewTitle"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewTitle"
        android:layout_toRightOf="@+id/textViewTitle"
        android:layout_toEndOf="@+id/textViewTitle"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:id="@+id/textViewCurrentTitle"
        android:textSize="16sp" />

    <TextView
        android:text="@string/textViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textView5"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="80dp"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewCurrentDesc"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:text="@string/textViewGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGenre"
        android:textSize="20sp"
        android:layout_below="@+id/scrollView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewGenre"
        android:layout_alignLeft="@+id/textViewCurrentTitle"
        android:layout_alignStart="@+id/textViewCurrentTitle"
        android:id="@+id/textViewCurrentGenre"
        android:textSize="16sp" />

    <TextView
        android:text="@string/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewGenre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textViewRating"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewRating"
        android:layout_alignLeft="@+id/textViewCurrentGenre"
        android:layout_alignStart="@+id/textViewCurrentGenre"
        android:id="@+id/textViewCurrentRating"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton"
            android:background="@drawable/first"
            android:onClick="goToFirst" />

        <ImageButton
            android:layout_height="50dp"
            android:id="@+id/imageButton2"
            android:background="@drawable/previous"
            android:layout_width="50dp"
            android:onClick="goToPrevious" />

        <Button
            android:text="@string/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishButton"
            android:layout_weight="1"
            android:onClick="finish" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/next"
            android:onClick="goToNext" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/imageButton4"
            android:background="@drawable/last"
            android:onClick="goToLast" />

    </LinearLayout>

    <TextView
        android:text="@string/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRating"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textViewYear"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewYear"
        android:layout_alignLeft="@+id/textViewCurrentRating"
        android:layout_alignStart="@+id/textViewCurrentRating"
        android:id="@+id/textViewCurrentYear"
        android:textSize="16sp" />

    <TextView
        android:text="@string/textViewIMDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textViewIMDB"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewIMDB"
        android:layout_alignLeft="@+id/textViewCurrentYear"
        android:layout_alignStart="@+id/textViewCurrentYear"
        android:id="@+id/textViewCurrentIMDB"
        android:textSize="16sp" />
</RelativeLayout>
