<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joyrasmussen.hw2_group34.AddMovie">

    <TextView
        android:text="@string/addName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:id="@+id/textView2"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:id="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:maxLength="50"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/textDescription"
        android:layout_alignLeft="@+id/textDescription"
        android:layout_alignStart="@+id/textDescription"
        android:layout_marginTop="11dp"
        android:id="@+id/editDescription"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:maxLength="1000"
        android:lines="4"/>

    <TextView
        android:text="@string/addGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textGenre"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@+id/editDescription"
        android:layout_alignLeft="@+id/editDescription"
        android:layout_alignStart="@+id/editDescription"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textGenre"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:id="@+id/dropdownGenre"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/textGenre" />

    <TextView
        android:text="@string/addRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dropdownGenre"
        android:layout_alignLeft="@+id/textGenre"
        android:layout_alignStart="@+id/textGenre"
        android:layout_marginTop="25dp"
        android:id="@+id/textRating"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"
        android:progress="1"
        android:layout_alignBottom="@+id/textRating"
        android:layout_alignLeft="@+id/dropdownGenre"
        android:layout_alignStart="@+id/dropdownGenre"
        android:id="@+id/seekBar"
        android:longClickable="false"
        android:maxWidth="170dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp" />

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekText"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/textYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textRating"
        android:layout_alignLeft="@+id/textRating"
        android:layout_alignStart="@+id/textRating"
        android:layout_marginTop="25dp"
        android:id="@+id/textYear"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:text="@string/addDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textDescription"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:text="@string/stringIMDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textYear"
        android:layout_alignLeft="@+id/textYear"
        android:layout_alignStart="@+id/textYear"
        android:layout_marginTop="25dp"
        android:id="@+id/textIMDB"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editYear"
        android:layout_alignBaseline="@+id/textYear"
        android:layout_alignBottom="@+id/textYear"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_alignStart="@+id/seekBar"
        android:maxLength="4"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editIMDB"
        android:layout_alignBaseline="@+id/textIMDB"
        android:layout_alignBottom="@+id/textIMDB"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/editYear"
        android:layout_alignStart="@+id/editYear" />

    <Button
        android:text="@string/addMovieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:onClick="addMovieListener"
        />

</RelativeLayout>
